# tiny-batch-renderer

./: CMakeLists.txt  README.md
include/: glad2.h
src/: main.c  renderer.c  renderer.h  texture.c  texture.h
